// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedScreen component renders correctly while loading 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "undefined4D",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingTop": 5,
        },
      ]
    }
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={true}
      />
    }
    refreshing={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
  <ModalScreen />
  <WritePostButton />
</View>
`;

exports[`FeedScreen component renders correctly while loading with events 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "undefined4D",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingTop": 5,
        },
      ]
    }
    data={
      Array [
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 1,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 2,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={true}
      />
    }
    refreshing={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 1,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 2,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <ModalScreen />
  <WritePostButton />
</View>
`;

exports[`FeedScreen component renders correctly with events 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "undefined4D",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingTop": 5,
        },
      ]
    }
    data={
      Array [
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 1,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 2,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 1,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 2,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <ModalScreen />
  <WritePostButton />
</View>
`;

exports[`FeedScreen component renders correctly with modal on top 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "undefined4D",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingTop": 5,
        },
      ]
    }
    data={
      Array [
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 1,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 2,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={true}
      />
    }
    refreshing={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 1,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 2,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <ModalScreen />
  <WritePostButton />
</View>
`;

exports[`FeedScreen component renders correctly with no write post button 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "undefined4D",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingTop": 5,
        },
      ]
    }
    data={
      Array [
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 1,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 2,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={true}
      />
    }
    refreshing={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 1,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 2,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <ModalScreen />
  <WritePostButton />
</View>
`;

exports[`FeedScreen component renders correctly with write post button due to facebook availability 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "undefined4D",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingTop": 5,
        },
      ]
    }
    data={
      Array [
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 1,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 2,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={true}
      />
    }
    refreshing={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 1,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 2,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <ModalScreen />
  <WritePostButton />
</View>
`;

exports[`FeedScreen component renders correctly with write post button due to twitter availability 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "undefined4D",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingTop": 5,
        },
      ]
    }
    data={
      Array [
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 1,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 2,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={true}
      />
    }
    refreshing={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 1,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
Thanks @azpinstalls for the work, parts, advice and setup.
#brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 2,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <ModalScreen />
  <WritePostButton />
</View>
`;

exports[`FeedScreen component renders correctly without events 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "undefined4D",
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingTop": 5,
        },
      ]
    }
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": "undefined4D",
        },
        Object {
          "paddingBottom": 5,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
  <ModalScreen />
  <WritePostButton />
</View>
`;
